--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -309,13 +309,13 @@ form, input {
 }
 .new_nav_first .nav-right .search-type-box .search-type {
     position: absolute;
-    width: 40px;
+    width: 49px;
     height: 28px;
     left: 0;
     top: 0;
     z-index: 999;
     background-color: #fff;
-    padding-left: 10px;
+    text-align: center;
     line-height: 28px;
     border: 1px solid #dcdcdc;
     border-right: none;
