首席顾问页面头部

--- a/views/chief.html
+++ b/views/chief.html
@@ -59,8 +59,8 @@
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/common_nav.html" as common_nav %}
-{{ common_nav.common_nav(tdk,helper) }}
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="dui-layout-lg clearfix" style="width: 1140px;background: #fff;margin-top: 20px;padding: 20px;">
   <!--国家-->
   {%
