--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -81,9 +81,9 @@
     <dd>
       <p class="advisor-name" style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;line-height: 20px;">{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
-      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >金吉列{{ advisor.organid | getCity() }}分公司</p>
+      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" style="width: 200px;margin-left: -48px;">金吉列{{ advisor.organid | getCity() }}分公司</p>
       {% else %}
-      <p class="advisor-bumen" data-cityId ="" >金吉列分公司</p>
+      <p class="advisor-bumen" data-cityId ="" style="width: 200px;margin-left: -48px;">金吉列分公司</p>
       {% endif %}
       <p class="advisor-enjoy">{{ advisor.position_name }}咨询顾问</p>
     </dd>
