--- a/views/widget/liuxue_item/liuxue_item_nunjucks.html
+++ b/views/widget/liuxue_item/liuxue_item_nunjucks.html
@@ -9,7 +9,7 @@
         <div class="article-info clearfix">
           <a class="adviser-info clearfix" href="{{helper.urlgen(item.uid | string)}}">
             <div target="_blank" class="avatar" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover"></div>
-            <div class="adviser-icon">ss{{item.user_info.realname| ellipsis(10)}}<i></i></div>		
+            <div class="adviser-icon">{{item.user_info.realname| ellipsis(10)}}<i></i></div>		
           </a>	
           <div class="tag article-tag special">留学时讯</div>	
         </div>			
