--- a/views/chief.html
+++ b/views/chief.html
@@ -298,7 +298,7 @@ $(document).ready(function (){
     page = $('#main_con').data('page') + 1;
     $(window).on('scroll', function () {
         var $scroll = $(window).scrollTop();
-        var con = document.getElementById('main_con').offsetHeight;
+        // var con = document.getElementById('main_con').offsetHeight;
         var doc = $(document).height()
         var win = $(window).height()
         if ($scroll >= (doc - win) - 500) {
@@ -351,7 +351,7 @@ function chiefmore () {
         // $('#main_con').data('page', page)
         page ++;
         console.log('page',page)
-        console.log(msg);
+        // console.log(msg);
         var mainhtml = ''
         for (var i = 0; i < msg.data.list.length;i++) {
           if ((i+1) % 4 == 0 ) {
