修改首页标签样式 审核人：淑琴

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -85,6 +85,20 @@
 	float: right;
 	margin-top: 14.5px;
 }
+.tag.article-tag {
+  display: inline-block;
+	padding: 0 15px;
+	height: 20px;
+	line-height: 20px;
+	font-size: 12px;
+	border-radius: 60px;
+	border: 1px solid #c13232;
+	color: #c13232;
+}
+.tag.article-tag.special {
+	background-color: #c13232;
+	color: #fff;
+}
 </style>
 {% for floor in shouye %} {#国家#}
 {% set ad_seat_index = loop.index + 10 %}
