--- a/views/header_new.html
+++ b/views/header_new.html
@@ -6,7 +6,7 @@
   <meta content="{{helper.pageTDK('description', tdk)}}" name="description">
   <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
   <meta name="baidu-site-verification" content="a01e20b4ccd416ba45d581ee3560ed84"/>
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/base.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/base1.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-1.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-append-1.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/nodemainnew.min.css">
