关于金吉列跳转到首页

--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -2,10 +2,10 @@
 <div class="new_nav_first_red" style="min-width:1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_common.png" alt="金吉列留学官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('branch_home') }}"><img src="{{helper.cdnhost}}/assets/img/logo_common.png" alt="金吉列留学官网"/></a>
         </div>
         <ul class="page-type">
-            <li class="type-nav small-nav"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
+            <li class="type-nav small-nav"><a href="{{ helper.urlgen('branch_home') }}">留学</a></li>
             <li class="type-nav middle-nav"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
             <!-- <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">首席顾问</a></li>
             <li class="type-nav middle-nav"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li> -->
