--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -26,7 +26,7 @@
 	height: 37px;
 	text-align: center;
 }
-.slide-icon-area .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;}
+.slide-icon-area .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;background-size: 100%;}
 .lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;font-size: 0;display: none;}
 .lx-tags-tab .slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;display: inline-block;*float: left;}
 .lx-tags-tab .slide-menu li a {
@@ -146,7 +146,7 @@
 			</ul>
 		</div>
 		<div class="slide-icon-area">
-			<i class="slide-icon" style="background:url({{helper.cdnhost}}/assets/img/home-slidedown.gif)"></i>
+			<i class="slide-icon" style="background-image:url({{helper.cdnhost}}/assets/img/home_slide_down.gif);filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/home_slide_down.gif',  sizingMethod='scale');background-repeat: no-repeat;"></i>
 		</div>
 		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter" style="background-image:url({{helper.cdnhost}}/assets/img/home_icon_arrow.png)">查看详情</a>
 	</div>
