--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -16,66 +16,19 @@
   {{ common_nav.common_nav(tdk,helper) }}
   <!--轮播图广告-->
   <div class="dui-layout-lg clearfix banner-box">
-    <div class="dui-layout-silde banner-box-right">
-      {% include "widget/xSlider/xSlider.html" %}
-    </div>
-    <div class="dui-layout-div"></div>
     <div class="dui-layout-con banner-box-left">
       {% include "widget/xSlider/xSlider2.html" %}
     </div>
+    <div class="dui-layout-div"></div>
+    <div class="dui-layout-silde banner-box-right">
+      {% include "widget/xSlider/xSlider.html" %}
+    </div>
   </div>
   <div class="dui-layout-lg clearfix dui-layout-padding" >
-    <div class="dui-layout-silde">
-      <!-- =======顾问头像关注====== -->
-      <div data-usertype="{{userinfo.usertype}}" id="userinfo">
-        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-        {% if userinfo.status == 1 %} {#离职#}
-          {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
-        {% else %} {#在职#}
-          {% if userinfo.usertype == 2 %}
-            {{community_advisor.advisor(userinfo,helper,login_info)}}
-          {% elif userinfo.usertype == 3 %}
-            {{community_advisor.counsellor(userinfo,helper,login_info)}}
-          {% endif %}
-        {% endif %}
-      </div>
-      <!-- ========猜你喜欢======= -->
-      <div style="margin-top: 20px;" class="dui-box-shadow">
-        <div class="common-title" style="border:1px solid #dcdcdc;">
-          <i></i>
-          <h3>猜你喜欢</h3>
-        </div>
-      {% if userinfo.adviser_type == 1 %}
-        {% esi helper.include(esikey,'fragment/guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
-      {% else %}
-        {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
-      {% endif %}
-      </div>
-      <div style="margin-top: 20px;" class="dui-box-shadow">
-        <div class="common-title" style="border:1px solid #dcdcdc;">
-          <i></i>
-          <h3>相关顾问</h3>
-        </div>
-        {% if userinfo.adviser_type == 2 %}
-          {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
-        {% else %}
-          {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid) %}
-        {% endif %}
-      </div>
-    </div>
-    <div class="dui-layout-div"></div>
     <div class="dui-layout-con" >
       <div class="dui-box-shadow" >
         <div class="adviser-case-detail-con" style="margin-top: 0;" >
-          {% import "widget2/community_nav/community_nav.html" as community_nav %}
-          {#% if userinfo.status == 1 %}
-            {{community_nav.adviser_nav_leave('专栏', userinfo.uid, helper)}}
-          {% else %#}
-            {% if userinfo.usertype == 2 %}
-             {{community_nav.adviser_nav('专栏', userinfo, helper)}}
-            {% endif %}
-          {#% endif %#}
-          <div class="adviser-top clearfix" style="margin-top: 20px;">
+          <div class="adviser-top clearfix">
             <div style="float:left;line-height: 50px;" >
               <div class="adviser-touxiang" style="background:url({{helper.avaterimg(userinfo.uid,'small',userinfo.status,userinfo.version)}}) no-repeat 0 0;background-size:cover;">
               </div>
@@ -83,37 +36,45 @@
                 {{userinfo.realname}}<i class="adviser-v-i"></i>
               </span>
             </div>
-            <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float:right;">
-              <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
-              <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
-              <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-              <a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>
-              <span class="art-report-btn" style="font-size: 12px;color:#333;cursor: pointer;" >举报</span>
+            <div style='float:right;'>
+                <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float: left;" data-uid='{{userinfo.uid}}'>
+                  <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
+                  <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
+                  <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+                  <a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>
+                  <span class="art-report-btn" style="font-size: 12px;color:#333;cursor: pointer;" >举报</span>
+                </div>
             </div>
           </div>
           <div class="clearfix" >
             <h1 class="adviser-case-detail-h3">
               {{article.article_info.title}}
             </h1>
-            <div class="art-tag">
-              <span class="art-tag-bg" ></span>
-              <span class="art-tag-list">{{article.article_info.tag_list}}</span>
-            </div>
+            {% if article.article_info.tag_list %}
+              <div class="tag article-tag" style="float:left;margin:19px 0 0 20px;">{{article.article_info.tag_list}}</div>
+            {% endif %}
           </div>
-          <div class="adviser-case-detail-come" >
-            <span>时间：{{article.article_info.add_time}}</span>
-            <span style="float:right;margin-left:20px;">
-              点赞<i id="fabulous-num">{{article.article_info.votes}}</i>
-            </span>
-            <span style="float:right;margin-left:20px;">
-              评论{{article.article_info.comments}}
-            </span>
-            <span style="float:right;margin-left:20px;">
-              收藏<i id="collection-num">{{article.article_info.favorites}}</i>
-            </span>
-            <span style="float:right;margin-left: 20px;">
-              阅读<i style="font-style: normal;" id="detail_views_num" data-viesNum="{{article.article_info.views}}"></i>
-            </span>
+          <div class="detail-info-bar clearfix">
+            <div class="adviser-case-detail-come" >
+              <span>时间：{{article.article_info.add_time}}</span>
+              <span>
+                收藏<i id="collection-num">{{article.article_info.favorites}}</i>
+              </span>
+              <span>
+                阅读<i style="font-style: normal;" id="detail_views_num" data-viesNum="{{article.article_info.views}}"></i>
+              </span>
+              <span>
+                评论{{article.article_info.comments}}
+              </span>
+              <span>
+                点赞<i id="fabulous-num">{{article.article_info.votes}}</i>
+              </span>
+            </div>
+            <div class="connect-info">
+              <img src="{{helper.cdnhost}}/assets/img/main_icon_phone.png" alt="">
+              <span><i class="zixun-info">留学咨询热线</i><i class="zixun-phone">：{{userinfo.tel}}</i></span>
+              <span class="zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</span>
+            </div>
           </div>
           <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
             {{article.article_info.message | safe}}
@@ -167,6 +128,46 @@
         </div>
       </div>
     </div>
+    
+    <div class="dui-layout-div"></div>
+
+    <div class="dui-layout-silde">
+      <!-- =======顾问头像关注====== -->
+      <div data-usertype="{{userinfo.usertype}}" id="userinfo">
+        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
+        {% if userinfo.status == 1 %} {#离职#}
+          {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
+        {% else %} {#在职#}
+          {% if userinfo.usertype == 2 %}
+            {{community_advisor.advisor(userinfo,helper,login_info)}}
+          {% elif userinfo.usertype == 3 %}
+            {{community_advisor.counsellor(userinfo,helper,login_info)}}
+          {% endif %}
+        {% endif %}
+      </div>
+      <!-- ========猜你喜欢======= -->
+      <div style="margin-top: 20px;" class="dui-box-shadow">
+        <div class="common-title" style="border:1px solid #dcdcdc;">
+          <i></i>
+          <h3>猜你喜欢</h3>
+        </div>
+      {% if userinfo.adviser_type == 1 %}
+        {% esi helper.include(esikey,'fragment/guess_like','n='+article.article_info.country_id,'c='+userinfo.organid) %}
+      {% else %}
+        {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+      {% endif %}
+      </div>
+      <div style="margin-top: 20px;" class="dui-box-shadow">
+        <div class="common-title" style="border:1px solid #dcdcdc;">
+          <i></i><h3>相关顾问</h3>
+        </div>
+        {% if userinfo.adviser_type == 2 %}
+          {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'uid='+userinfo.uid,'isArticle=1','isIm=1') %}
+        {% else %}
+          {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+article.article_info.country_id,'c='+userinfo.organid,'isArticle=1','uid='+userinfo.uid) %}
+        {% endif %}
+      </div>
+    </div>
   </div>
   {% if userinfo.adviser_type==1 %}
   {% import "widget/new_slide/new_slide3.html" as  slide %}
@@ -177,7 +178,6 @@
   {% endif %}
   {% include "widget/new_footer/common_footer.html" %}
   <!-- =====活动弹窗===== -->
-  {% include "widget2/active_popup/active_popup.html" %}
   <div>
     <input type="hidden" id="detail_id" value="{{article_id}}"/>
   </div>
@@ -225,7 +225,34 @@
                 "bdStyle":"0",
                 "bdSize":"16",
                 "bdUrl":window.location.href,
-                "bdDesc":''
+                "bdDesc":'',
+                onAfterClick: function (cmd) {
+                  var authorUId = $('.bdsharebuttonbox').attr('data-uid');
+                  var shareUId = login_ss ? login_ss.uid : '';
+                  var count_data = {
+                    'type': cmd,
+                    'shareUId': shareUId,
+                    'authorUId': authorUId,
+                    'articleId': article_id
+                  }
+                  // console.log('onAfterClick',count_data)
+                  $.ajax({
+                    url: ajaxUrlPrefix.nodeapi+'/share_count',
+                    type:'get',
+                    data:count_data,
+                    dataType:'json',
+                    success:function(msg){
+                      if(msg.code === 0){
+                        console.log('转发统计成功');
+                      } else {
+                        console.log('转发未统计');
+                      }
+                    },
+                    error:function(XMLHttpRequest, textStatus, errorThrown){
+                      console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
+                    }
+                  });
+                }
             },
             "share":{}
         };
