--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -47,7 +47,7 @@
           </div>
           <div class="assistant">
             <ul class="assistant-tab">
-              <li class="img-tab active">
+              <li class="img-tab">
                 <span class="pic"></span>
                 <span>图片处理助手</span>
               </li>
@@ -60,7 +60,7 @@
                   <span>文章发布助手</span>
               </li>
             </ul>
-            <div class="assistant-cont" data-pdf="{{getpdf}}">
+            <div class="assistant-cont" data-pdf="{{getpdf}}" style="display:none;">
               <div class="img-content"></div>
               <div class="fold-btn">
                 <img src="{{helper.cdnhost}}/assets/img/article_icon_SQ@2x.png" alt="">
@@ -342,20 +342,26 @@
         src:pdfList[1].file_path,
       });
       $('.assistant-tab li').on('click',function(){
-        $('.assistant-tab li').removeClass('active');
-        $(this).addClass('active');
-        $('.assistant-cont').slideDown();
-        var index = $(this).index()+1;
-        if(pdfList[index]){
-          $('.img-content').media({
-            width: '100%',
-            height: '500px',
-            autoplay: true,
-            src:pdfList[index].file_path
-          });
+        if(!$(this).hasClass('active')){
+          $('.assistant-tab li').removeClass('active');
+          $(this).addClass('active');
+          $('.assistant-cont').slideDown();
+          var index = $(this).index()+1;
+          if(pdfList[index]){
+            $('.img-content').media({
+              width: '100%',
+              height: '500px',
+              autoplay: true,
+              src:pdfList[index].file_path
+            });
+          }
+        }else{
+          $('.assistant-tab li').removeClass('active');
+          $('.assistant-cont').slideUp();
         }
       })
       $('.fold-btn').on('click',function(){
+        $('.assistant-tab li').removeClass('active');
         $('.assistant-cont').slideUp();
       })
       var login_ss = null; //获取用户信息
@@ -489,7 +495,7 @@
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
       editor.customConfig.pasteFilterStyle = false;
-      editor.customConfig.uploadFileName = 'upload';
+      editor.customConfig.uploadFileName = 'yimin_upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
       // 限制一次最多上传 5 张图片
