--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -1,13 +1,12 @@
 {% macro yimin_search_nav(tdk,helper) %}
-<div class="new_nav_first_red" style="min-width: 1200px;">
+<div class="new_nav_first_red yimin_nav" style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网" style="width:215px;"/></a>
         </div>
         <ul class="page-type">
-            <li class="active"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
-            <!--<li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>-->
-            <li style="width: 118px;" class="active"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
+                <li class="type-nav small-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
+                <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE' or tdk.pagekey == 'CULTURE' or tdk.pagekey == 'EVENTS' or tdk.pagekey == 'COOPERATION' or tdk.pagekey == 'CONTACT'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
