--- a/views/widget2/community_nav/community_nav.css
+++ b/views/widget2/community_nav/community_nav.css
@@ -3,6 +3,7 @@
   height: 40px;
   background: #f3f3f3;
   margin: 20px 20px 0;
+  font-size: 0;
 }
 .community-nav-con .community-nav-list{
   display: inline-block;
@@ -17,39 +18,37 @@
   background: #c13232;
   color:#ffffff;
 }
-.nav-phone{
-  width: 170px;
-  float:right;
-  color:#666666;
-  *margin-top:-40px;
+.community-nav-con .connect-info {
+  float: right;
+  font-size: 0px;
+  height: 24px;
+  margin-top: 8px;
 }
-.nav-phone .phone-bg{
-  width: 36px;
-  height: 36px;
-  display: block;
+.connect-info img {
+  vertical-align: super;
   margin-right: 10px;
+  position: relative;
+  top: 3px;
+}
+.connect-info .zixun-info {
+  font-size: 12px;
+  color: #666;
+}
+.connect-info .zixun-phone {
+  font-size: 14px;
+  color: #333;
+}
+.connect-info .zixun-btn {
+  display: inline-block;
+  width: 76px;
+  height: 24px;
   text-align: center;
-  line-height: 36px;
-  margin-top:2px;
-  background: #c13232;
-  color:#ffffff;
-  float:left;
-
-}
-.phone-bg i{
-  font-size:22px;
-}
-.community-zixun{
-  float:left;
-  display: block;
-  height: 20px;
-  width: 124px;
-  line-height: 20px;
-  font-size:12px;
-}
-.community-tel{
-  display: block;
-  font-size:14px;
+  line-height: 24px;
+  background-color: #c13232;
+  color: #fff;
+  font-size: 14px;
+  margin-left: 20px;
+  cursor: pointer;
 }
 
 
