参赞主页电话显示

--- a/views/widget2/community_nav/community_nav.html
+++ b/views/widget2/community_nav/community_nav.html
@@ -57,10 +57,9 @@ set adviserNav = [
   <a href="{{helper.urlgen( id | string, item.nav_url_type)}}" class="community-nav-list">{{item.nav_name}}</a>
   {% endif %}
   {% endfor %}
-  <div class="nav-phone">
-    <span class="phone-bg"><i class="iconfont">&#xe618;</i></span>
-    <span class="community-zixun" >留学咨询热线：</span>
-    <span class="community-tel">400-010-8000</span>
+  <div class="connect-info">
+    <img src="{{helper.cdnhost}}/assets/img/main_icon_phone.png" alt="">
+    <span><i class="zixun-info">留学咨询热线</i><i class="zixun-phone">：400-010-8000</i></span>
   </div>
 </div>
 {% endmacro %}
@@ -91,10 +90,9 @@ set adviserNav = [
   <a href="{{helper.urlgen( id | string, item.nav_url_type)}}" class="community-nav-list">{{item.nav_name}}</a>
   {% endif %}
   {% endfor %}
-  <div class="nav-phone">
-    <span class="phone-bg"><i class="iconfont">&#xe618;</i></span>
-    <span class="community-zixun" >留学咨询热线：</span>
-    <span class="community-tel">400-010-8000</span>
+  <div class="connect-info">
+    <img src="{{helper.cdnhost}}/assets/img/main_icon_phone.png" alt="">
+    <span><i class="zixun-info">留学咨询热线</i><i class="zixun-phone">：400-010-8000</i></span>
   </div>
 </div>
 {% endmacro %}
